# facebook-scraper

./: .editorconfig  .flake8  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  facebook_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
facebook_scraper/: __init__.py  __main__.py  constants.py  exceptions.py  extractors.py  facebook_scraper.py  fb_types.py  page_iterators.py  tracking.py  typing.py  utils.py
tests/: test_get_posts.py  test_parse_date.py  test_parse_duration.py
tests/cassettes/: TestGetGroupPosts.test_get_group_posts.yaml  TestGetPosts.test_get_posts.yaml  TestGetPosts.test_get_posts_fields_presence.yaml  TestGetPosts.test_get_posts_with_extra_info.yaml  TestGetPosts.test_get_posts_with_extra_info_fields_presence.yaml  TestGetPosts.test_smoketest.yaml
