[tool.poetry]
name = "facebook-scraper"
version = "0.2.19"
description = "Scrape Facebook public pages without an API key"
authors = ["Kevin Zúñiga <kevin.zun@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevinzg/facebook-scraper"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"
youtube_dl = {version = "*", optional=true}
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
pytest = "^5.4.1"
pytest-vcr = "^1.0.2"
ipdb = "^0.13.4"

[tool.poetry.extras]
youtube-dl = ["youtube_dl"]

[tool.poetry.scripts]
facebook-scraper = 'facebook_scraper.__main__:run'

[tool.black]
line-length = 98
target-version = ["py36"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
